log
Wed, May 14, 2025  8:55:07 AM: 
 sudoku.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:66:21: error: implicit declaration of function 'add_to_list' [-Werror=implicit-function-declaration]
                     add_to_list(list, adj_node);  // Agregamos el nodo a la lista
                     ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025  9:12:49 AM: 
 sudoku.c | 30 ++++++++++++++++--------------
 1 file changed, 16 insertions(+), 14 deletions(-)
 tests:  0|5
total_score: 0/70
797f664
Wed, May 14, 2025  9:14:41 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8bb7bb8
Wed, May 14, 2025  9:16:25 AM: 
 sudoku.c | 48 +++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 47 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
5c9dfc6
Wed, May 14, 2025  9:30:31 AM: 
 sudoku.c | 28 ++++++++++++++++++++--------
 1 file changed, 20 insertions(+), 8 deletions(-)
 tests:  6|2
total_score: 45/70
3327a10
Wed, May 14, 2025  9:34:56 AM: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
153b492
Fri, May 16, 2025  9:59:38 AM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:154:22: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
     Node* nodo = top(initial);
                      ^~~~~~~
In file included from test.c:4:0:
list.h:32:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'Node * {aka struct <anonymous> *}'
 void* top(Stack* s);
       ^~~
In file included from test.c:5:0:
sudoku.c:155:9: error: passing argument 1 of 'pop' from incompatible pointer type [-Werror=incompatible-pointer-types]
     pop(initial) ;
         ^~~~~~~
In file included from test.c:4:0:
list.h:31:6: note: expected 'Stack * {aka struct List *}' but argument is of type 'Node * {aka struct <anonymous> *}'
 void pop(Stack* s);
      ^~~
cc1.exe: all warnings being treated as errors
0bcc686
Fri, May 16, 2025 10:00:33 AM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
   [ INFO ] cargando sudoku de la figura de ejemplo
6f25152
Fri, May 16, 2025 10:02:04 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
53f381c
Fri, May 16, 2025 10:03:08 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4e6515d
